--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="./Style/Images/PNG/favicon.png" />
-    <meta name="description" content="LUXE IMMO MAMELLES APPART 1er D" />
+    <meta
+      name="description"
+      content="LUXE IMMO MAMELLES APPART F2 Droite RDC"
+    />
     <meta
       name="Keywords"
       content=" Visualisation architecturale, ArchViz, archviz-dakar, Architectur, Visualisation 3D, 3D sénégal, Architectur sénégal, archviz-dakar.com "
@@ -22,7 +25,7 @@
       rel="stylesheet"
     />
 
-    <title>LUXE IMMO MAMELLES APPART 1er D</title>
+    <title>LUXE IMMO MAMELLES APPART F2 Droite RDC</title>
 
     <script
       rel="preload"
